--- a/forge-1.20.1-47.4.0-mdk/gradle.properties
+++ b/forge-1.20.1-47.4.0-mdk/gradle.properties
@@ -35,7 +35,7 @@ loader_version_range=[47,)
 mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.1
+mapping_version=2023.09.03-1.20.1
 
 
 ## Mod Properties
@@ -56,4 +56,4 @@ mod_group_id=net.pxxel.tutorialmod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Kaupenjoe, pxxel
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Following Kaupenjoe's YouTube modding tutorials\n
+mod_description=Following Kaupenjoe's YouTube modding tutorials
